api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: api
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3100
        volumeMounts:
          - mountPath: /app/storage
            name: api-pvc
      volumes:
        - name: api-pvc
          persistentVolumeClaim:
            claimName: api-pvc
