web-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myweb
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
  - port: 3200
    targetPort: 3200
